rake doesn't properly align the strokes #44604

Closed
opened 2015-05-04 19:36:58 +02:00 by Nahuel Belich · 12 comments

System Information
win 7 x64

Blender Version
Hash: 9715d4c

Short description of error

rake strokes doesn`t properly align one after an other Blender_2.jpg this with normal space stroke but its really noticeable using curves to draw curve paths, as you can see in the image at the bottom follows a nice line but on the curves the rake stroke doesn't fully align with the path

Exact steps for others to reproduce the error
1-rakeissue.blend shoud be alredy on texture paint mode
2-aim on the plane align the curve on the plane
3-hit enter to draw

**System Information** win 7 x64 **Blender Version** Hash: 9715d4c **Short description of error** rake strokes doesn`t properly align one after an other ![Blender_2.jpg](https://archive.blender.org/developer/F170063/Blender_2.jpg) this with normal space stroke but its really noticeable using curves to draw curve paths, as you can see in the image at the bottom follows a nice line but on the curves the rake stroke doesn't fully align with the path **Exact steps for others to reproduce the error** 1-[rakeissue.blend](https://archive.blender.org/developer/F170066/rakeissue.blend) shoud be alredy on texture paint mode 2-aim on the plane align the curve on the plane 3-hit enter to draw
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @EugenioPignataro

Added subscriber: @EugenioPignataro

it would be good to fix this not only for the curve stroke, also the other stroke modes(space, dot etc) will benefit of a fidelity control on the rake of the stroke direction

it would be good to fix this not only for the curve stroke, also the other stroke modes(space, dot etc) will benefit of a fidelity control on the rake of the stroke direction
Bastien Montagne self-assigned this 2015-05-06 12:35:58 +02:00

I’ll check this too…

I’ll check this too…

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Ok, so basically, issue here is we do not have access to tangent at the draw point, only to the line made by current point and a previous one. This is a reasonable approximation when draw points are close enough, and there is no singularity (or even sharp changes) in slope, but breaks in any other case.

Antony, I do not think we consider this a bug? sounds more like limitation of current design…

However, there is one thing that makes things even worse here - previous rake reference point is generated by averaging itself and current draw point (paint.c, line 552-553), this sounds very bad to me? Replacing

  interp_v2_v2v2(ups->last_rake, ups->last_rake, mouse_pos, u);  /* u == 0.5f */

by

  copy_v2_v2(ups->last_rake, mouse_pos);

Alleviates the issue, at least.

Ok, so basically, issue here is we do not have access to tangent at the draw point, only to the line made by current point and a previous one. This is a reasonable approximation when draw points are close enough, and there is no singularity (or even sharp changes) in slope, but breaks in any other case. Antony, I do not think we consider this a bug? sounds more like limitation of current design… However, there is one thing that makes things even worse here - previous rake reference point is generated by averaging itself and current draw point (paint.c, line 552-553), this sounds very bad to me? Replacing ``` interp_v2_v2v2(ups->last_rake, ups->last_rake, mouse_pos, u); /* u == 0.5f */ ``` by ``` copy_v2_v2(ups->last_rake, mouse_pos); ``` Alleviates the issue, at least.

This issue was referenced by a5dead2e8c

This issue was referenced by a5dead2e8cee27c33771f7d74020ef9e15beceee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a5dead2e8c.

Closed by commit a5dead2e8c.

Thanks a bunch Antony!!!!

Amazing!

Thanks a bunch Antony!!!! Amazing!

General fix is by Bastien, I took care of the curve case.

General fix is by Bastien, I took care of the curve case.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44604
No description provided.